--- a/views/index.jade
+++ b/views/index.jade
@@ -66,6 +66,11 @@ html(lang='en')
                   span on 12 Sep, Thu
                 p.tagline by Singapore JS
             li
+              a(href='http://www.meetup.com/BitcoinSingapore/events/136928802')
+                p LA & SG Bitcoin Meetup in Singapore
+                  span on 12 Sep, Thu
+                p.tagline by Bitcoin Singapore Meetup Group
+            li
               a(href='http://www.meetup.com/Agile-Singapore/events/137237922/')
                 p Book Craig Langenfeld: Why Ceremonies?
                   span on 12 Sep, Thu
