--- a/views/index.jade
+++ b/views/index.jade
@@ -61,6 +61,26 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
+              a(href='http://www.meetup.com/Singapore-Android-Developers/events/138087342/')
+                p SG Android Devs Sept Meetup
+                  span on 18 Sep, Wed
+                p.tagline by Singapore Android Developers
+            li
+              a(href='http://www.meetup.com/R-User-Group-SG/events/140170622/')
+                p Demystify 2 Key Terms in Risk Management - ALM and BASEL III
+                  span on 18 Sep, Wed
+                p.tagline by R User Group - Singapore (RUGS)
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/139413892/')
+                p Book Club: Functional JavaScript
+                  span on 19 Sep, Thu
+                p.tagline by Singapore JS
+            li
+              a(href='http://www.meetup.com/R-User-Group-SG/events/140458712/')
+                p Connect with the Best Financial Modelers in Singapore...
+                  span on 21 Sep, Sat
+                p.tagline by R User Group - Singapore (RUGS)
+            li
               a(href='http://www.meetup.com/Singapore-Ruby-Group/events/139384022')
                 p September Meetup
                   span on 24 Sep, Tue
