--- a/views/index.jade
+++ b/views/index.jade
@@ -61,16 +61,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/Singapore-Android-Developers/events/138087342/')
-                p SG Android Devs Sept Meetup
-                  span on 18 Sep, Wed
-                p.tagline by Singapore Android Developers
-            li
-              a(href='http://www.meetup.com/R-User-Group-SG/events/140170622/')
-                p Demystify 2 Key Terms in Risk Management - ALM and BASEL III
-                  span on 18 Sep, Wed
-                p.tagline by R User Group - Singapore (RUGS)
-            li
               a(href='http://www.meetup.com/Singapore-JS/events/139413892/')
                 p Book Club: Functional JavaScript
                   span on 19 Sep, Thu
@@ -80,6 +70,16 @@ html(lang='en')
                 p Connect with the Best Financial Modelers in Singapore...
                   span on 21 Sep, Sat
                 p.tagline by R User Group - Singapore (RUGS)
+            li
+              a(href='http://an-evening-with-stefano-virgilli.eventbrite.com/')
+                p Creative Crew Talks - An evening with Stefano Virgilli (founder of Creative Crew)
+                  span on 23 Sep, Mon
+                p.tagline by Creative Crew
+            li
+              a(href='https://www.facebook.com/events/680897865271710')
+                p iOS Dev Scout # Sept Meetup
+                  span on 23 Sep, Mon
+                p.tagline by iOS Dev Scout
             li
               a(href='http://www.meetup.com/Singapore-Ruby-Group/events/139384022')
                 p September Meetup
