--- a/views/index.jade
+++ b/views/index.jade
@@ -61,49 +61,69 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/Singapore-JS/events/139413892/')
-                p Book Club: Functional JavaScript
-                  span on 19 Sep, Thu
-                p.tagline by Singapore JS
-            li
-              a(href='http://www.meetup.com/R-User-Group-SG/events/140458712/')
-                p Connect with the Best Financial Modelers in Singapore...
-                  span on 21 Sep, Sat
-                p.tagline by R User Group - Singapore (RUGS)
-            li
-              a(href='http://an-evening-with-stefano-virgilli.eventbrite.com/')
-                p Creative Crew Talks - An evening with Stefano Virgilli (founder of Creative Crew)
-                  span on 23 Sep, Mon
-                p.tagline by Creative Crew
-            li
-              a(href='https://www.facebook.com/events/680897865271710')
-                p iOS Dev Scout # Sept Meetup
-                  span on 23 Sep, Mon
-                p.tagline by iOS Dev Scout
-            li
-              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/139384022')
-                p September Meetup
-                  span on 24 Sep, Tue
-                p.tagline by Singapore Ruby Group
-            li
-              a(href='http://www.meetup.com/R-User-Group-SG/events/136902562')
-                p An update on useR! 2013
-                  span on 26 Sep, Thu
-                p.tagline by U User Group
-            li
               a(href='https://www.facebook.com/events/163064807216602/')
                 p SG Makers meetup
                   span on 27 Sep, Fri
                 p.tagline by Singapore Makers
             li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/111422882/')
-                p Firefox OS
-                  span on 27 Sep, Fri
-                p.tagline by HTML5Rocks@SG
-            li
               a(href='https://www.facebook.com/events/498058460269196')
                 p Scala by @Raymond Tay
                   span on 27 Sep, Fri
+                p.tagline by General Hackers
+            li
+              a(href='http://www.meetup.com/Agile-Singapore/events/137018142/')
+                p Sep/2013 - Open Space
+                  span on 30 Sep, Mon
+                p.tagline by Agile Singapore
+            li
+              a(href='https://www.facebook.com/events/196520960530037')
+                p October 2013 BigData.SG Meetup: Wed. Oct 2nd from 6:00 to 9:00 at Microsoft Singapore
+                  span on 2 Oct, Wed
+                p.tagline by Big Data
+            li
+              a(href='http://www.meetup.com/devops-singapore/events/141852552/')
+                p DevOps Singapore Meetup #15: QA to sous-Chef
+                  span on 2 Oct, Wed
+                p.tagline by DevOps Singapore
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/142348162')
+                p Book Club: Functional JavaScript
+                  span on 3 Oct, Thu
+                p.tagline by Singapore JS
+            li
+              a(href='https://www.facebook.com/events/374820632644568')
+                p Salt and Salt-Cloud
+                  span on 4 Oct, Fri
+                p.tagline by General Hackers
+            li
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/139386832/')
+                p Rails InstallFest
+                  span on 5 Oct, Sat
+                p.tagline by Singapore Ruby Group
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/141715672')
+                p talk.js
+                  span on 7 Oct, Mon
+                p.tagline by Singapore JS
+            li
+              a(href='https://www.facebook.com/events/164075297119950')
+                p Creative Crew Oct Talks
+                  span on 8 Oct, Tue
+                p.tagline by Creative Crew
+            li
+              a(href='https://www.facebook.com/events/1388975631327132')
+                p Algorithms by @Yan Han
+                  span on 11 Oct, Fri
+                p.tagline by General Hackers
+            li
+              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93223812/')
+                p HTML5 Series - Chapter 9: We rocks so much that we speak semantics !
+                  span on 11 Oct, Fri
+                p.tagline by HTML5Rocks@SG
+            li
+              a(href='https://www.facebook.com/events/533775080035722')
+                p Combining art/design with technology by @Fung Kwok Pan
+                  span on 18 Oct, Fri
                 p.tagline by General Hackers
 
         section
