--- a/views/index.jade
+++ b/views/index.jade
@@ -61,41 +61,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='https://www.facebook.com/events/163064807216602/')
-                p SG Makers meetup
-                  span on 27 Sep, Fri
-                p.tagline by Singapore Makers
-            li
-              a(href='https://www.facebook.com/events/498058460269196')
-                p Scala by @Raymond Tay
-                  span on 27 Sep, Fri
-                p.tagline by General Hackers
-            li
-              a(href='http://www.meetup.com/Agile-Singapore/events/137018142/')
-                p Sep/2013 - Open Space
-                  span on 30 Sep, Mon
-                p.tagline by Agile Singapore
-            li
-              a(href='https://www.facebook.com/events/196520960530037')
-                p October 2013 BigData.SG Meetup: Wed. Oct 2nd from 6:00 to 9:00 at Microsoft Singapore
-                  span on 2 Oct, Wed
-                p.tagline by Big Data
-            li
-              a(href='http://www.meetup.com/devops-singapore/events/141852552/')
-                p DevOps Singapore Meetup #15: QA to sous-Chef
-                  span on 2 Oct, Wed
-                p.tagline by DevOps Singapore
-            li
-              a(href='http://www.meetup.com/Singapore-JS/events/142348162')
-                p Book Club: Functional JavaScript
-                  span on 3 Oct, Thu
-                p.tagline by Singapore JS
-            li
-              a(href='https://www.facebook.com/events/374820632644568')
-                p Salt and Salt-Cloud
-                  span on 4 Oct, Fri
-                p.tagline by General Hackers
-            li
               a(href='http://www.meetup.com/Singapore-Ruby-Group/events/139386832/')
                 p Rails InstallFest
                   span on 5 Oct, Sat
@@ -111,6 +76,16 @@ html(lang='en')
                   span on 8 Oct, Tue
                 p.tagline by Creative Crew
             li
+              a(href='https://www.facebook.com/events/572062716164416')
+                p Book Club: Functional JavaScript
+                  span on 10 Oct, Thu
+                p.tagline by Singapore JS
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/140322822/')
+                p Orange Hive|Design for Startups, Open House!
+                  span on 10 Oct, Thu
+                p.tagline by Orange Hive
+            li
               a(href='https://www.facebook.com/events/1388975631327132')
                 p Algorithms by @Yan Han
                   span on 11 Oct, Fri
@@ -124,6 +99,16 @@ html(lang='en')
               a(href='https://www.facebook.com/events/533775080035722')
                 p Combining art/design with technology by @Fung Kwok Pan
                   span on 18 Oct, Fri
+                p.tagline by General Hackers
+            li
+              a(href='https://www.facebook.com/events/408485712607960')
+                p Creative Crew Oct Workshop
+                  span on 19 Oct, Sat
+                p.tagline by Creative Crew
+            li
+              a(href='https://www.facebook.com/events/366229893509113')
+                p Machine learning in action: tuning an underwater communication link
+                  span on 25 Oct, Fri
                 p.tagline by General Hackers
 
         section
