--- a/views/index.jade
+++ b/views/index.jade
@@ -61,25 +61,15 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/Singapore-JS/events/140322822')
+              a(href='http://www.meetup.com/R-User-Group-SG/events/145205702/')
+                p Connect with the Best Financial Modelers in Singapore...
+                  span on 13 Oct, Sun
+                p.tagline by R User Group
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/144107362/')
                 p Book Club: Functional JavaScript
-                  span on 10 Oct, Thu
+                  span on 17 Oct, Thu
                 p.tagline by Singapore JS
-            li
-              a(href='https://www.facebook.com/events/572062716164416')
-                p Orange Hive|Design for Startups, Open House!
-                  span on 10 Oct, Thu
-                p.tagline by Orange Hive
-            li
-              a(href='https://www.facebook.com/events/1388975631327132')
-                p Algorithms by @Yan Han
-                  span on 11 Oct, Fri
-                p.tagline by General Hackers
-            li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93223812/')
-                p HTML5 Series - Chapter 9: We rocks so much that we speak semantics !
-                  span on 11 Oct, Fri
-                p.tagline by HTML5Rocks@SG
             li
               a(href='https://www.facebook.com/events/533775080035722')
                 p Combining art/design with technology by @Fung Kwok Pan
@@ -91,9 +81,29 @@ html(lang='en')
                   span on 19 Oct, Sat
                 p.tagline by Creative Crew
             li
+              a(href='http://www.meetup.com/Singapore-Android-Developers/events/144816372/')
+                p October Meetup at Samsung SG HQ
+                  span on 23 Oct, Wed
+                p.tagline by Singapore Android Developers
+            li
+              a(href='https://www.facebook.com/events/529426590465150')
+                p iOS Dev Scout # Oct Meetup
+                  span on 24 Oct, Thu
+                p.tagline by iOS Dev Scout
+            li
               a(href='https://www.facebook.com/events/366229893509113')
                 p Machine learning in action: tuning an underwater communication link
                   span on 25 Oct, Fri
+                p.tagline by General Hackers
+            li
+              a(href='https://www.facebook.com/events/658231244219717')
+                p Build Your Own 3D Printer By Guo Chen
+                  span on 1 Nov, Fri
+                p.tagline by General Hackers
+            li
+              a(href='https://www.facebook.com/events/525759454181260')
+                p How i do categorisation and some naive bayes sh*t
+                  span on 8 Nov, Fri
                 p.tagline by General Hackers
 
         section
