--- a/views/index.jade
+++ b/views/index.jade
@@ -61,11 +61,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/R-User-Group-SG/events/145205702/')
-                p Connect with the Best Financial Modelers in Singapore...
-                  span on 13 Oct, Sun
-                p.tagline by R User Group
-            li
               a(href='http://www.meetup.com/Singapore-JS/events/144107362/')
                 p Book Club: Functional JavaScript
                   span on 17 Oct, Thu
@@ -81,6 +76,11 @@ html(lang='en')
                   span on 19 Oct, Sat
                 p.tagline by Creative Crew
             li
+              a(href='https://www.facebook.com/events/227881837335644')
+                p Mozillians in Singapore meetup 19 October 2013
+                  span on 19 Oct, Sat
+                p.tagline by Gary Kwong
+            li
               a(href='http://www.meetup.com/Singapore-Android-Developers/events/144816372/')
                 p October Meetup at Samsung SG HQ
                   span on 23 Oct, Wed
@@ -95,6 +95,16 @@ html(lang='en')
                 p Machine learning in action: tuning an underwater communication link
                   span on 25 Oct, Fri
                 p.tagline by General Hackers
+            li
+              a(href='https://www.facebook.com/events/272874456170882')
+                p Singapore PHP User Group Oct 2013 Meetup
+                  span on 29 Oct, Tue
+                p.tagline by Singapore PHP User Group
+            li
+              a(href='https://www.facebook.com/events/366929756772923')
+                p Python User Group SG: AGM
+                  span on 30 Oct, Wed
+                p.tagline by Singapore Python User Group
             li
               a(href='https://www.facebook.com/events/658231244219717')
                 p Build Your Own 3D Printer By Guo Chen
