--- a/views/index.jade
+++ b/views/index.jade
@@ -81,6 +81,11 @@ html(lang='en')
                   span on 19 Oct, Sat
                 p.tagline by Gary Kwong
             li
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/145083402/')
+                p October Meetup
+                  span on 22 Oct, Tue
+                p.tagline by Singapore Ruby Group
+            li
               a(href='http://www.meetup.com/Singapore-Android-Developers/events/144816372/')
                 p October Meetup at Samsung SG HQ
                   span on 23 Oct, Wed
@@ -106,6 +111,11 @@ html(lang='en')
                   span on 30 Oct, Wed
                 p.tagline by Singapore Python User Group
             li
+              a(href='https://www.facebook.com/events/648325675206969')
+                p Raspberry Jam SG #6
+                  span on 31 Oct, Thu
+                p.tagline by RaspberryPI & Co Singapore
+            li
               a(href='https://www.facebook.com/events/658231244219717')
                 p Build Your Own 3D Printer By Guo Chen
                   span on 1 Nov, Fri
@@ -115,6 +125,11 @@ html(lang='en')
                 p How i do categorisation and some naive bayes sh*t
                   span on 8 Nov, Fri
                 p.tagline by General Hackers
+            li
+              a(href='https://www.facebook.com/events/404891872973220')
+                p SG Makers-Arduino meetup
+                  span on 29 Nov, Fri
+                p.tagline by Singapore Arduino Club
 
         section
           h3 open source
