--- a/views/index.jade
+++ b/views/index.jade
@@ -60,46 +60,7 @@ html(lang='en')
         section
           h3 open events
           ul.open-list.first
-            li
-              a(href='http://www.meetup.com/Singapore-JS/events/144107362/')
-                p Book Club: Functional JavaScript
-                  span on 17 Oct, Thu
-                p.tagline by Singapore JS
-            li
-              a(href='https://www.facebook.com/events/533775080035722')
-                p Combining art/design with technology by @Fung Kwok Pan
-                  span on 18 Oct, Fri
-                p.tagline by General Hackers
-            li
-              a(href='https://www.facebook.com/events/408485712607960')
-                p Creative Crew Oct Workshop
-                  span on 19 Oct, Sat
-                p.tagline by Creative Crew
-            li
-              a(href='https://www.facebook.com/events/227881837335644')
-                p Mozillians in Singapore meetup 19 October 2013
-                  span on 19 Oct, Sat
-                p.tagline by Gary Kwong
-            li
-              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/145083402/')
-                p October Meetup
-                  span on 22 Oct, Tue
-                p.tagline by Singapore Ruby Group
-            li
-              a(href='http://www.meetup.com/Singapore-Android-Developers/events/144816372/')
-                p October Meetup at Samsung SG HQ
-                  span on 23 Oct, Wed
-                p.tagline by Singapore Android Developers
-            li
-              a(href='https://www.facebook.com/events/529426590465150')
-                p iOS Dev Scout # Oct Meetup
-                  span on 24 Oct, Thu
-                p.tagline by iOS Dev Scout
-            li
-              a(href='https://www.facebook.com/events/366229893509113')
-                p Machine learning in action: tuning an underwater communication link
-                  span on 25 Oct, Fri
-                p.tagline by General Hackers
+
             li
               a(href='https://www.facebook.com/events/272874456170882')
                 p Singapore PHP User Group Oct 2013 Meetup
@@ -121,10 +82,20 @@ html(lang='en')
                   span on 1 Nov, Fri
                 p.tagline by General Hackers
             li
+              a(href='https://www.facebook.com/events/170819736457305')
+                p Creative Coders November Meetup
+                  span on 5 Nov, Tue
+                p.tagline by Creative Coders
+            li
               a(href='https://www.facebook.com/events/525759454181260')
                 p How i do categorisation and some naive bayes sh*t
                   span on 8 Nov, Fri
                 p.tagline by General Hackers
+            li
+              a(href='https://www.facebook.com/events/231773676987461')
+                p New APIs in iOS 7 by @Mugunth
+                  span on 22 Nov, Fri
+                p.tagline by Hackers and Painters
             li
               a(href='https://www.facebook.com/events/404891872973220')
                 p SG Makers-Arduino meetup
