--- a/views/index.jade
+++ b/views/index.jade
@@ -60,22 +60,16 @@ html(lang='en')
         section
           h3 open events
           ul.open-list.first
-
-            li
-              a(href='https://www.facebook.com/events/272874456170882')
-                p Singapore PHP User Group Oct 2013 Meetup
-                  span on 29 Oct, Tue
-                p.tagline by Singapore PHP User Group
-            li
-              a(href='https://www.facebook.com/events/366929756772923')
-                p Python User Group SG: AGM
-                  span on 30 Oct, Wed
-                p.tagline by Singapore Python User Group
             li
               a(href='https://www.facebook.com/events/648325675206969')
                 p Raspberry Jam SG #6
                   span on 31 Oct, Thu
                 p.tagline by RaspberryPI & Co Singapore
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/144107622/')
+                p Book Club: Functional JavaScript
+                  span on 31 Oct, Thu
+                p.tagline by Singapore JS
             li
               a(href='https://www.facebook.com/events/658231244219717')
                 p Build Your Own 3D Printer By Guo Chen
@@ -87,15 +81,50 @@ html(lang='en')
                   span on 5 Nov, Tue
                 p.tagline by Creative Coders
             li
+              a(href='http://www.meetup.com/devops-singapore/events/147784772/')
+                p Devops Singapore Meetup #16: Managing 1000 instances on EC2 with Capistrano
+                  span on 5 Nov, Tue
+                p.tagline by DevOps Singapore
+            li
+              a(href='http://www.meetup.com/Bubbly-TechTalks/events/148019672/')
+                p Slick Tricks for iOS User Interface
+                  span on 7 Nov, Thu
+                p.tagline by Bubbly TechTalks
+            li
               a(href='https://www.facebook.com/events/525759454181260')
                 p How i do categorisation and some naive bayes sh*t
                   span on 8 Nov, Fri
                 p.tagline by General Hackers
             li
+              a(href='https://www.facebook.com/events/681332261878174')
+                p Orange Hive| Design for Startups, Website Workshop
+                  span on 11 Nov, Mon
+                p.tagline by Orange Hive
+            li
+              a(href='https://www.facebook.com/events/531988860226871')
+                p How Creative Crew November Talk
+                  span on 12 Nov, Tue
+                p.tagline by Creative Crew
+            li
+              a(href='https://www.facebook.com/events/1431160090440465')
+                p How New is Easy but Right is Hard: Hacking Product Management by @Bernard Leong
+                  span on 15 Nov, Fri
+                p.tagline by Hackers and Painters
+            li
+              a(href='http://www.meetup.com/HTML5Rocks-SG/events/144166122/')
+                p HTML5 Series - Chapter 9: We rocks so much that we speak semantics !
+                  span on 15 Nov, Fri
+                p.tagline by HTML5Rocks@SG
+            li
               a(href='https://www.facebook.com/events/231773676987461')
                 p New APIs in iOS 7 by @Mugunth
                   span on 22 Nov, Fri
                 p.tagline by Hackers and Painters
+            li
+              a(href='https://www.facebook.com/events/218956441613496')
+                p Science Café SG
+                  span on 28 Nov, Thu
+                p.tagline by Science Café
             li
               a(href='https://www.facebook.com/events/404891872973220')
                 p SG Makers-Arduino meetup
