--- a/views/index.jade
+++ b/views/index.jade
@@ -61,31 +61,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='https://www.facebook.com/events/648325675206969')
-                p Raspberry Jam SG #6
-                  span on 31 Oct, Thu
-                p.tagline by RaspberryPI & Co Singapore
-            li
-              a(href='http://www.meetup.com/Singapore-JS/events/144107622/')
-                p Book Club: Functional JavaScript
-                  span on 31 Oct, Thu
-                p.tagline by Singapore JS
-            li
-              a(href='https://www.facebook.com/events/658231244219717')
-                p Build Your Own 3D Printer By Guo Chen
-                  span on 1 Nov, Fri
-                p.tagline by General Hackers
-            li
-              a(href='https://www.facebook.com/events/170819736457305')
-                p Creative Coders November Meetup
-                  span on 5 Nov, Tue
-                p.tagline by Creative Coders
-            li
-              a(href='http://www.meetup.com/devops-singapore/events/147784772/')
-                p Devops Singapore Meetup #16: Managing 1000 instances on EC2 with Capistrano
-                  span on 5 Nov, Tue
-                p.tagline by DevOps Singapore
-            li
               a(href='http://www.meetup.com/Bubbly-TechTalks/events/148019672/')
                 p Slick Tricks for iOS User Interface
                   span on 7 Nov, Thu
@@ -100,6 +75,11 @@ html(lang='en')
                 p Orange Hive| Design for Startups, Website Workshop
                   span on 11 Nov, Mon
                 p.tagline by Orange Hive
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/149046752')
+                p talk.js
+                  span on 11 Nov, Mon
+                p.tagline by Singapore JS
             li
               a(href='https://www.facebook.com/events/531988860226871')
                 p How Creative Crew November Talk
