--- a/views/index.jade
+++ b/views/index.jade
@@ -61,16 +61,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/Bubbly-TechTalks/events/148019672/')
-                p Slick Tricks for iOS User Interface
-                  span on 7 Nov, Thu
-                p.tagline by Bubbly TechTalks
-            li
-              a(href='https://www.facebook.com/events/525759454181260')
-                p How i do categorisation and some naive bayes sh*t
-                  span on 8 Nov, Fri
-                p.tagline by General Hackers
-            li
               a(href='https://www.facebook.com/events/681332261878174')
                 p Orange Hive| Design for Startups, Website Workshop
                   span on 11 Nov, Mon
@@ -91,10 +81,20 @@ html(lang='en')
                   span on 15 Nov, Fri
                 p.tagline by Hackers and Painters
             li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/144166122/')
+              a(href='http://www.meetup.com/HTML5Rocks-SG/events/144166122')
                 p HTML5 Series - Chapter 9: We rocks so much that we speak semantics !
                   span on 15 Nov, Fri
                 p.tagline by HTML5Rocks@SG
+            li
+              a(href='http://www.meetup.com/devops-singapore/events/149644442')
+                p StarHub’s "Enterprise Communications Made Easy" hackathon
+                  span on 16 Nov, Sat
+                p.tagline by StarHub
+            li
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/150110982')
+                p November Meetup
+                  span on 19 Nov, Fri
+                p.tagline by Singapore Ruby Group
             li
               a(href='https://www.facebook.com/events/231773676987461')
                 p New APIs in iOS 7 by @Mugunth
@@ -110,6 +110,12 @@ html(lang='en')
                 p SG Makers-Arduino meetup
                   span on 29 Nov, Fri
                 p.tagline by Singapore Arduino Club
+            li
+              a(href='https://www.facebook.com/events/440841696036601')
+                p How to hack your way through a Termsheet by @Julian Low
+                  span on 29 Nov, Fri
+                p.tagline by Hackers and Painters
+
 
         section
           h3 open source
