--- a/views/index.jade
+++ b/views/index.jade
@@ -61,61 +61,60 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='https://www.facebook.com/events/681332261878174')
-                p Orange Hive| Design for Startups, Website Workshop
-                  span on 11 Nov, Mon
-                p.tagline by Orange Hive
+              a(href='https://www.facebook.com/events/1395782223994072')
+                p iOS Dev Scout # Nov Meetup
+                  span on 25 Nov, Mon
+                p.tagline by iOS Dev Scout
             li
-              a(href='http://www.meetup.com/Singapore-JS/events/149046752')
-                p talk.js
-                  span on 11 Nov, Mon
-                p.tagline by Singapore JS
+              a(href='https://www.facebook.com/events/561715820572862')
+                p Putting It Together: Vagrant + SSH + Composer + PHPUnit
+                  span on 27 Nov, Wed
+                p.tagline by Singapore PHP User Group
             li
-              a(href='https://www.facebook.com/events/531988860226871')
-                p How Creative Crew November Talk
-                  span on 12 Nov, Tue
-                p.tagline by Creative Crew
-            li
-              a(href='https://www.facebook.com/events/1431160090440465')
-                p How New is Easy but Right is Hard: Hacking Product Management by @Bernard Leong
-                  span on 15 Nov, Fri
-                p.tagline by Hackers and Painters
-            li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/144166122')
-                p HTML5 Series - Chapter 9: We rocks so much that we speak semantics !
-                  span on 15 Nov, Fri
-                p.tagline by HTML5Rocks@SG
-            li
-              a(href='http://www.meetup.com/devops-singapore/events/149644442')
-                p StarHub’s "Enterprise Communications Made Easy" hackathon
-                  span on 16 Nov, Sat
-                p.tagline by StarHub
-            li
-              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/150110982')
-                p November Meetup
-                  span on 19 Nov, Fri
-                p.tagline by Singapore Ruby Group
-            li
-              a(href='https://www.facebook.com/events/231773676987461')
-                p New APIs in iOS 7 by @Mugunth
-                  span on 22 Nov, Fri
-                p.tagline by Hackers and Painters
+              a(href='http://www.meetup.com/Agile-Singapore/events/150498672/')
+                p Nov/2013 - Open Space
+                  span on 27 Nov, Wed
+                p.tagline by Agile Singapore
             li
               a(href='https://www.facebook.com/events/218956441613496')
                 p Science Café SG
                   span on 28 Nov, Thu
                 p.tagline by Science Café
             li
+              a(href='https://www.facebook.com/events/638817689474844')
+                p Singapore 3D Printing Meetup V
+                  span on 28 Nov, Thu
+                p.tagline by Funbie Studios
+            li
               a(href='https://www.facebook.com/events/404891872973220')
                 p SG Makers-Arduino meetup
                   span on 29 Nov, Fri
                 p.tagline by Singapore Arduino Club
             li
+              a(href='http://www.meetup.com/HTML5Rocks-SG/events/144166122/')
+                p HTML5 Series - Chapter 9: We rocks so much that we speak semantics !
+                  span on 29 Nov, Fri
+                p.tagline by HTML5Rocks@SG
+            li
               a(href='https://www.facebook.com/events/440841696036601')
                 p How to hack your way through a Termsheet by @Julian Low
                   span on 29 Nov, Fri
                 p.tagline by Hackers and Painters
-
+            li
+              a(href='http://www.meetup.com/R-User-Group-SG/events/143782772/')
+                p R Big Data inside Hadoop
+                  span on 3 Dec, Tue
+                p.tagline by R User Group - Singapore (RUGS)
+            li
+              a(href='https://www.facebook.com/events/780193005343684')
+                p Best Practices in Building a Responsive Website by @coderkungfu
+                  span on 6 Dec, Fri
+                p.tagline by Hackers and Painters
+            li
+              a(href='https://www.facebook.com/events/780193005343684')
+                p CouchDB by @Thibault
+                  span on 6 Dec, Fri
+                p.tagline by Hackers and Painters
 
         section
           h3 open source
