--- a/views/index.jade
+++ b/views/index.jade
@@ -115,6 +115,11 @@ html(lang='en')
                 p CouchDB by @Thibault
                   span on 6 Dec, Fri
                 p.tagline by Hackers and Painters
+            li
+              a(href='http://sg.hackandtell.org/')
+                p Hack and Tell
+                  span on 10 Dec, Tue
+                p.tagline by Hack and Tell
 
         section
           h3 open source
